--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             font-family: 'Segoe UI', sans-serif;
             margin: 0;
-            background-color: #f4f4f4;
+            background-color: #ffffff;
             background-image: url(https://images.pexels.com/photos/1421903/pexels-photo-1421903.jpeg);
             background-size: cover;
             background-position: center;
@@ -33,20 +33,21 @@
         button {
             padding: 10px;
             font-size: 15px;
-            border: 2px solid #ccc;
+            border: 1px solid #000000;
             border-radius: 15px;
             margin: 10px;
             transition: 0.2s ease;
-            background-color: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(5px);
-            color: whitesmoke;
+            background-color: rgba(255, 255, 255, 0);
+            backdrop-filter: blur(0px);
+            color: rgb(255, 255, 255);
+            box-shadow: 0px 0px 10px rgb(255, 255, 255);
         }
 
         input[type="file"]:hover,
         input[type="text"]:hover,
         button:hover {
             padding: 15px;
-            cursor: pointer;
+            cursor: pointer, crosshair;
         }
 
         .image-gallery {
@@ -57,16 +58,17 @@
         }
 
         .image-card {
-            background: rgba(255, 255, 255, 0.1);
+            background: rgba(255, 255, 255, 0);
             padding: 4px;
             border-radius: 10px;
-            border: 0px solid #000000;
+            border: 1px solid #ffffff;
             width: 200px;
             box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
             text-align: center;
             position: relative;
             transition: all 0.2s ease;
             color: #333;
+            box-shadow: 0px 0px 15px rgb(255, 0, 0);
         }
         .image-card:hover {
             transition: 0.2s ease;
@@ -128,7 +130,7 @@
 
     <h1>📁 Oasis Photos</h1>
 
-    <!-- 🔍 Google Image Search -->
+    <!-- Google Image Search -->
     <div class="search-section">
         <form action="https://www.google.com/search" method="get" target="_blank">
             <input type="text" name="q" placeholder="Search images on Google">
@@ -137,7 +139,7 @@
         </form>
     </div>
 
-    <!-- 📁 Upload / Tag / Local Search -->
+    <!-- Upload / Tag / Local Search -->
     <div class="controls">
         <input type="file" id="fileInput" accept="image/*" multiple>
         <input type="text" id="tagInput" placeholder="Enter tag (optional)">
@@ -146,7 +148,7 @@
         <input type="text" id="searchBox" oninput="filterGallery()" placeholder="🔎 Search by tag...">
     </div>
 
-    <!-- 📸 Image Gallery -->
+    <!--  Image Gallery -->
     <div class="image-gallery" id="gallery"></div>
 
     <script>
